<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flappy Bird</string>
    <string name="flying_burger">Flying Burger</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="register_user">Register User</string>
    <string name="play">Play</string>

    <string name="logout">Logout</string>
    <string name="top_scors">Top scors</string>
    <string name="change_language">change Language</string>
    <string name="top_score_10">10 top scores</string>
    <string name="welcome">"Welcome "</string>
    <string name="register">Register</string>
    <string name="date_format">MM/dd/yyyy</string>
    <string name="hebrew">עברית</string>
    <string name="english">English</string>


</resources>
