<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/passwordTextRegisterPage"
        android:layout_width="295dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_btn"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:paddingLeft="5sp"
        android:password="true"
        android:textColor="#FFF1F1"
        android:textColorHint="#067561"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextRegisterPage" />

    <EditText

        android:id="@+id/fullNameTextRegisterPage"
        android:layout_width="282dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_btn"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/full_name"
        android:paddingLeft="5sp"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="#067561"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/ageTextRegisterPage"
        android:layout_width="282dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_btn"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/age"
        android:paddingLeft="5sp"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="#067561"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameTextRegisterPage" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="352dp"
        android:layout_height="114dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_title"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/flying_burger"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailTextRegisterPage"
        android:layout_width="282dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_btn"
        android:ems="10"
        android:enabled="true"
        android:gravity="center"
        android:hint="@string/email_address"
        android:paddingLeft="5sp"
        android:textColor="#FFF1F1"
        android:textColorHint="#067561"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageTextRegisterPage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RegisterBtn"
        android:layout_width="362dp"
        android:layout_height="89dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/shape_btn"
        android:inputType="textCapSentences"
        android:text="@string/register_user"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextRegisterPage" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>